--- a/index.html
+++ b/index.html
@@ -209,25 +209,25 @@
 	<h1><center>FRESH OUT THE LAB</center></h1>&emsp;&emsp;&emsp;&emsp;
 	<DIV class="content1">
 		<DIV class="CONTAINER">
-			<img src="img3.avif" height="450" width="300">
+			<img src="IMG3.avif" height="450" width="300">
 			<h2>Black Panther: Wakanda Forever</h2>
 			<p>Sneakers</p>
 			<p>₹3499</p>
 		</DIV>
 		<DIV class="CONTAINER">
-			<img src="img4.avif"height="450" width="300">
+			<img src="IMG4.avif"height="450" width="300">
 			<h2>Milano: Bloom</h2>
 			<p>Sneakers</p>
 			<p>₹2599</p>
 		</DIV>
 		<DIV class="CONTAINER">
-			<img src="img5.avif"height="450" width="300">
+			<img src="IMG5.avif"height="450" width="300">
 			<h2>Velocity: Cobalt</h2>
 			<p>Sneakers</p>
 			<p>₹2599</p>
 		</DIV>
 		<DIV class="CONTAINER">
-			<img src="img6.avif"height="450" width="300">
+			<img src="IMG6.avif"height="450" width="300">
 			<h2>Hydros: Harry Potter Bravery</h2>
 			<p>Sneakers</p>
 			<p>₹1499</p>
@@ -235,4 +235,5 @@
 		
 	</DIV>
 </body>
+
 </html>
